discussion/kv_engine/124412/124412_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38326: Allow failed IORequests to be requeued

The magma code was not allowing failed IORequests to be re-queued as
part of the commitCallback.

As part of the change in order to support MockMagmaKVStore, I had to
shift some code around.

Change-Id: I13c0b5f699d888d2479d79b2daf8c7f2119e5657

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-04-07 18:10:27.000000000
Message: 
Uploaded patch set 11.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-07 19:13:26.000000000
Message: 
Patch Set 11: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1600/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:158:5: warning: use auto when initializing with a cast to avoid duplicating the type name [modernize-use-auto]
    MetaData* docMeta =
    ^~~~~~~~
    auto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:169:5: warning: use auto when initializing with a cast to avoid duplicating the type name [modernize-use-auto]
    MetaData* docMeta =
    ^~~~~~~~
    auto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:175:5: warning: use auto when initializing with a cast to avoid duplicating the type name [modernize-use-auto]
    MetaData* docMeta =
    ^~~~~~~~
    auto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:181:5: warning: use auto when initializing with a cast to avoid duplicating the type name [modernize-use-auto]
    MetaData* docMeta =
    ^~~~~~~~
    auto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:187:5: warning: use auto when initializing with a cast to avoid duplicating the type name [modernize-use-auto]
    MetaData* docMeta =
    ^~~~~~~~
    auto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:193:5: warning: use auto when initializing with a cast to avoid duplicating the type name [modernize-use-auto]
    MetaData* docMeta =
    ^~~~~~~~
    auto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:199:5: warning: use auto when initializing with a cast to avoid duplicating the type name [modernize-use-auto]
    MetaData* docMeta =
    ^~~~~~~~
    auto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29: error: expected class name [clang-diagnostic-error]
class MagmaRequest : public IORequest {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:45:16: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return key.size();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:49:46: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return reinterpret_cast<const char*>(key.data());
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1600/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29:
error: expected class name [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1600/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2061/ : FAILURE

Failure of a CTest test [2020-04-07T18:13:56.155Z] 228/396 Test #228: ep_testsuite.full_eviction.rocksdb ..........................................................................Child aborted ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2061/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3068/ : FAILURE

Failure of a CTest test [2020-04-07T18:54:02.504Z] 234/377 Test #233: ep_testsuite_dcp.ephemeral.comp_active ...................................................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3068/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10865/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27380/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/118/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23422/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3011/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3004/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
